--- a/src/components/card/card.styles.scss
+++ b/src/components/card/card.styles.scss
@@ -3,7 +3,11 @@
     margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap:20px;
+    grid-gap:40px;
     font-size: 10px;
     border: solid 5px;
+    box-shadow: 10px grey;
+    background-color:rgb(255, 196, 0);
+    align-items: center;
+    justify-content: center;
 }
